# libupd8

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  hypercorn.toml  pyproject.toml  techstack.md  techstack.yml  werf.yaml
.github/workflows/: codeql-analysis.yml  python-app.yml
.helm/: secret-values.yaml  values.yaml
.helm/templates/: 10-configs.yaml  backend-ingress.yaml  backend-website-deployment.yaml  celery-beat-deployment.yaml  celery-worker-deployment.yaml  flower-deployment.yaml  redis-deployment.yaml  tgbot-deployment.yaml
modules/tgbase/: admin.py  apps.py  models.py
modules/tgbase/migrations/: 0001_initial.py
modules/tgbot/: admin.py  apps.py  menu.py  models.py
modules/tgbot/migrations/: 0001_initial.py  0002_auto_20210804_2209.py  0003_trackedrustpackage.py
modules/tgbot/templates/: list.md  start.md  update_post.md
modules/tgbot/templatetags/: telegram_fmt.py
project/: celeryapp.py  settings.py  tgbotapp.py
